@@ -12,7 +12,7 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <selenium.version>4.20.0</selenium.version>
+        <selenium.version>4.27.0</selenium.version>
         <testing.version>7.8.0</testing.version>
         <webdrivermanager.version>5.6.2</webdrivermanager.version>
     </properties>
@@ -57,7 +57,6 @@
             <groupId>com.pratikum.testing.otomation</groupId>
             <artifactId>Otomation-Testing-Dengan-Selenium-BY-ZidanYB</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.praktikum.whitebox.exception</groupId>
@@ -70,6 +69,12 @@
             <artifactId>com.praktikum.whitebox.exception.exception</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.8.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
@@ -84,6 +89,15 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>testing.xml</suiteXmlFile>
                     </suiteXmlFiles>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
